# zzop

./: .editorconfig  .gitattributes  .gitignore  .mcp.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  VERSIONING.md  server.json
crates/config/: Cargo.toml  build.rs  config-surface.json
crates/config/src/: jsonc.rs  lib.rs  lib_tests.rs  mapper.rs  test_support.rs  workspaces.rs
crates/config/src/mapper/: options.rs  paths.rs  severity.rs  tests.rs  validation.rs  warnings.rs
crates/config/src/workspaces/: glob.rs  manifest.rs  tests.rs
crates/config/tests/: config_parity.rs
crates/engine/: Cargo.toml
crates/engine/examples/: cross_layer_rule_counts.rs  dep_graph_export.rs  fastapi_overlay_adapter.rs  java_provides_project.rs  self_scan.rs  xlayer_dump.rs
crates/engine/examples/fastapi_overlay_adapter/: main.rs  overlay.rs  scan.rs
crates/engine/src/: cache.rs  config.rs  coverage.rs  cross_layer_findings.rs  dead_exports.rs  disclosure.rs  dispatch.rs  envelope.rs  framework_silence.rs  generated_banner.rs  io.rs  lib.rs  output.rs  pipeline.rs  tests.rs  trees.rs
crates/engine/src/analyze/: assemble.rs  compose.rs  diagnostics.rs  mod.rs  native_rules.rs
crates/engine/src/cache/: tests.rs
crates/engine/src/cross_layer_findings/: mod.rs  (+3 more)
crates/engine/tests/: analyze_adapter_overlay.rs  analyze_asset_ref.rs  analyze_axios_base_prefix_e2e.rs  analyze_be_framework_coverage_warning.rs  analyze_cache.rs  analyze_channels.rs  analyze_controller_prefix_ref.rs  analyze_coverage_census.rs  analyze_cross_layer_findings.rs  analyze_cross_layer_retry_write.rs  analyze_cross_layer_severity_override.rs  analyze_cross_layer_test_io_filter.rs  analyze_csharp_cross_layer.rs  analyze_csharp_module.rs  analyze_dead_exports.rs  analyze_diagnostics.rs  analyze_envelope.rs  analyze_git.rs  analyze_gitignore.rs  analyze_go_cross_layer.rs  analyze_go_module.rs  analyze_http_pack_io_scan.rs  analyze_io_java.rs  analyze_io_java_project.rs  analyze_io_natives.rs  analyze_io_scan_tree.rs  analyze_java_imports.rs  analyze_java_imports_overlay.rs  analyze_minified.rs  analyze_multi_tree.rs  analyze_multi_tree_java.rs  analyze_native_middleware.rs  analyze_no_applicable_dsl_rules.rs  analyze_profiling.rs  analyze_python_cross_layer.rs  analyze_routes_hono.rs  analyze_routes_pathname_dispatch.rs  analyze_rule_config.rs  analyze_rust_cross_layer.rs  analyze_rust_self.rs  (+10 more)
crates/facade/: Cargo.toml
crates/facade/src/: analyze.rs  analyze_tests.rs  config.rs  config_tests.rs  envelope.rs  envelope_tests.rs  lib.rs  output.rs  packs_tests.rs  query.rs  query_e2e_tests.rs  query_tests.rs  request.rs  route_injection.rs  rule_pack.rs  rule_pack_tests.rs  test_support.rs  version.rs
crates/host/: Cargo.toml  README.md
crates/host/src/: embedded.rs  lib.rs  server.rs  tools.rs
parser/parser-csharp/: Cargo.toml
parser/parser-csharp/src/: lib.rs  node_kinds.rs  util.rs
parser/parser-go/: Cargo.toml
parser/parser-go/src/: lib.rs  node_kinds.rs  util.rs
parser/parser-java-21/: Cargo.toml
parser/parser-java-21/src/: lib.rs  node_kinds.rs  security.rs  spring_security.rs  util.rs
parser/parser-prisma/: Cargo.toml
parser/parser-prisma/src/: analysis.rs  discover.rs  lib.rs  orchestrator_tests.rs  parse.rs  tests.rs
parser/parser-python-3/: Cargo.toml
parser/parser-python-3/src/: lib.rs
parser/parser-typescript/: Cargo.toml
parser/parser-typescript/src/: asset_refs.rs  cjs_exports.rs  cjs_require.rs  factory.rs  ident_refs.rs  imports.rs  lib.rs  loop_spans.rs  parse.rs  project.rs  re_exports.rs  sfc_imports.rs  symbol_shapes.rs  symbols.rs  symbols_tests.rs  test_util.rs
rules/: Cargo.toml  README.md
rules/dsl/be-db/: be-db.json  be-db.rs  client_lifecycle.rs  money_and_catch.rs  queries.rs  races.rs  transactions.rs  writes.rs
rules/dsl/be-reliability/: be-reliability.json  be-reliability.rs  config_flags.rs  env_outside_config.rs  fetch_and_process.rs  routes_and_handlers.rs  server_hygiene.rs  suppression.rs  writes_and_parsing.rs
rules/dsl/be-security/: be-security.json  be-security.rs  conn_string_credentials.rs  cors_csp.rs  crypto.rs  frontend_exposure.rs  html_injection.rs  http_exposure.rs  java_moved_rules.rs  java_security.rs  jwt.rs  jwt_sign_secret.rs  mass_assignment.rs  private_key_committed.rs  request_targets.rs  scan_scope.rs  secrets.rs  secrets_vetoes.rs  shell_exec.rs  sql_injection.rs  template_output.rs  timing_compare.rs  vendor_token_committed.rs
rules/dsl/browser/: browser.json  browser.rs  dialogs.rs  javascript_url.rs  jquery_html.rs  location_assign.rs  location_assign_guards.rs  markdown_html.rs  postmessage.rs  unsafe_html.rs  vue_v_html.rs
rules/dsl/conventions/: conventions.json
rules/dsl/fullstack/: fullstack.json  fullstack.rs  http_shapes.rs  localhost_egress.rs  sockets_and_routes.rs
rules/dsl/go/: go.json  go.rs  goroutine_in_loop.rs
rules/dsl/http/: auth_gates.rs  http.json  http.rs  read_model.rs  route_exposure.rs
rules/dsl/java-security/: java-security.json  java-security.rs
rules/dsl/jsp-security/: jsp-security.json
rules/dsl/perf/: api_in_loop.rs  eager_relation_declared.rs  jpa_eager_fetch.rs  perf.json  perf.rs
rules/dsl/react/: react.json  react.rs  setstate_after_await_unmounted.rs
rules/dsl/redis/: client_no_error_listener.rs  flushall_in_code.rs  keys_glob_scan.rs  redis.json  redis.rs  redis_counter_get_set.rs  redis_lock_get_then_set.rs  redis_lock_no_ttl.rs
rules/dsl/routes/: routes.json
rules/dsl/security/: security.json  security.rs  taint_and_eval.rs
rules/dsl/sql/: aggregation.rs  destructive_migration.rs  no_where.rs  nplus1.rs  query_logic_density.rs  select_like.rs  sql.json  sql.rs  suppression.rs  toctou.rs  truncate.rs
rules/dsl/typescript/: casts_and_handlers.rs  js_pitfalls.rs  no_explicit_any.rs  numeric_correctness.rs  typescript.json  typescript.rs
rules/native/rules-cross-layer/: Cargo.toml
rules/native/rules-graph/: Cargo.toml
rules/native/rules-http/: Cargo.toml
rules/native/rules-schema/: Cargo.toml
rules/src/: lib.rs
(+653 files in other folders)
