[workspace]
resolver = "2"
members = [
  # Internal engine crates (not published directly; consumed by the packages/ artifacts below)
  "crates/core",
  "crates/metrics",
  "crates/engine",
  "crates/git",
  "crates/cache",
  "crates/facade",
  "crates/config",

  # Published artifacts — packages/ holds ONLY externally-published artifacts
  "packages/native",
  "packages/mcp",

  # Parser frontends (former lang/ + dsl/, merged) — source -> Normalized AST / Common IR
  "parser/parser-typescript",
  "parser/parser-prisma",
  "parser/parser-python-3",
  "parser/parser-rust",
  "parser/parser-go",
  "parser/parser-java-21",

  # JSP support arrives via the external-parser envelope protocol (docs/NORMALIZED_AST.md), not an
  # in-workspace crate — no placeholder crate needed (see parser/README.md).

  # Native rules — whole-graph, statically linked into the engine (composed by register_all_native)
  "rules/native/rules-graph",
  "rules/native/rules-http",
  "rules/native/rules-cross-layer",
  "rules/native/rules-schema",

  # Language/environment rule packs are declarative DSL data (rules/dsl/<pack>/<pack>.json), not crates —
  # the engine interprets them (WASM approach dropped). "rules" below is a thin test-only crate that gives
  # each pack's co-located <pack>.rs a cargo test target; it carries no rule data or interpreter logic.
  "rules",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"

# Pin shared dependency versions here. swc version isolation: swc is pinned in
# parser/parser-typescript/Cargo.toml and confined to that crate, so an upgrade's re-verification
# scope is one crate, not the whole workspace (enforced by scripts/check-swc-isolation.sh).
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
rayon = "1"
