[workspace]
resolver = "2"
members = [
  # Internal engine crates (not published directly; consumed by crates/host below)
  "crates/core",
  "crates/metrics",
  "crates/engine",
  "crates/git",
  "crates/cache",
  "crates/facade",
  "crates/config",
  "crates/summary",

  # Host crate — lib-only shared dispatch (`tools`) + embedded contract docs (`embedded`) + the shared
  # `version()` (`server`), consumed by BOTH product crates below. Carries no [[bin]] of its own.
  "crates/host",

  # Product layer: packages/ holds everything that SHIPS, one dir per product. `packages/cli` is a
  # zero-logic npm shim (pure JS, spawns the native `zzop` binary — not a Cargo member); the two below
  # are the native binaries themselves, each its own Cargo package building exactly one [[bin]] over
  # crates/host + crates/summary. `packages/mcpb` (Desktop manifest) and `packages/cli/npm/*` (platform
  # sub-packages) are npm/manifest-only, likewise not Cargo members. The napi addon (`@zzop/native`,
  # formerly `packages/native`) was removed 2026-07-23 — nothing in the distribution used it.
  "packages/cli-bin", # -> zzop[.exe]     (CLI argv dispatch + CLI helpers)
  "packages/mcp",     # -> zzop-mcp[.exe] (stdio loop + server/resources + MCP tool schemas)

  # Parser frontends (former lang/ + dsl/, merged) — source -> Normalized AST / Common IR
  "parser/parser-typescript",
  "parser/parser-prisma",
  "parser/parser-python-3",
  "parser/parser-rust",
  "parser/parser-go",
  "parser/parser-java-21",
  "parser/parser-sql",
  "parser/parser-csharp",

  # JSP support arrives via the external-parser envelope protocol (docs/NORMALIZED_AST.md), not an
  # in-workspace crate — no placeholder crate needed (see parser/README.md).

  # Native rules — whole-graph, statically linked into the engine (composed by register_all_native)
  "rules/native/rules-graph",
  "rules/native/rules-http",
  "rules/native/rules-cross-layer",
  "rules/native/rules-schema",

  # Language/environment rule packs are declarative DSL data (rules/dsl/<pack>/<pack>.json), not crates —
  # the engine interprets them (WASM approach dropped). "rules" below is a thin test-only crate that gives
  # each pack's co-located <pack>.rs a cargo test target; it carries no rule data or interpreter logic.
  "rules",
]

[workspace.package]
# Version SSOT (2026-07-22 reform): the real release version lives here, bumped per release. CI verifies
# the pushed `v*` tag, `.claude-plugin/plugin.json`, and the MCPB manifest all match this. `version_string()`
# / the binaries report `CARGO_PKG_VERSION` directly (no `ZZOP_RELEASE_VERSION` env). Cache-bust tokens are
# stamped with this version at their scope's last change — see the cache decision.
version = "0.22.0"
edition = "2021"
license = "MIT"

# Pin shared dependency versions here. swc version isolation: swc is pinned in
# parser/parser-typescript/Cargo.toml and confined to that crate, so an upgrade's re-verification
# scope is one crate, not the whole workspace (enforced by scripts/check-swc-isolation.sh).
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
rayon = "1"
