# The config front-end shared by every native host: zzop.config.jsonc discovery -> JSONC stripping ->
# the config->facade-request mapper -> `trees: "auto"` workspace expansion. A shared rlib so every
# native host maps configs identically — the zzop-mcp binary today, and the binary's own CLI surface
# as it grows (mcp-distribution decision, "MCP-first, CLI later"). Originally ported from the removed
# JS front-end; the emitted request JSON is pinned against the committed
# docs/contracts/config-parity.fixture.json golden by tests/config_parity.rs.
[package]
name = "zzop-config"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
build = "build.rs"

[dependencies]
serde_json = { workspace = true }
