[package]
name = "zzop-host"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# Lib-only shared crate behind zzop's two Node-free host PRODUCTS (each its own Cargo package, each
# building exactly one bin over this lib): `zzop` (package `zzop-cli-bin`, packages/cli-bin — the CLI:
# analyze/cross/endpoint/…) and `zzop-mcp` (package `zzop-mcp`, packages/mcp — the MCP server over
# stdio). Both dispatch through this crate's `tools` module, so the two products cannot drift on the
# analyze/cross/endpoint/validate answer. This crate is a THIN PROTOCOL FACADE: ALL
# summary/shaping/filter/warning-merge logic lives in the shared `zzop-summary` crate (crates/summary)
# so it cannot drift per-host (a future full-CLI binary reuses it too, and gets it for free instead of
# reimplementing it). `zzop-config` stays a direct dependency only for the embedded config-surface
# contract resource (`embedded.rs`) and end-to-end test fixtures (`zzop_config::BUNDLED_PACK_SOURCES`),
# not for any shaping logic — `zzop-facade` is no longer a direct dependency at all: every facade call
# this crate used to make directly now happens inside `zzop-summary` (extracted from the now-removed
# cdylib napi addon crate, whose link step broke under the local gnu toolchain even for rlib
# dependents — see the mcp-distribution decision).
[dependencies]
zzop-summary = { path = "../summary" }
zzop-config = { path = "../config" }
serde_json = { workspace = true }
